# wltd

./: CMakeLists.txt  README.md  main.cpp
include/: dataEntry.h  datasource.h  datastore.h  enum.h  event.h  filedatastore.h  httplib.h  stock_data_source.h  utils.h  webdatasource.h
src/: event.cpp
src/data/: datasource.cc  datastore.cpp  filedatastore.cc  webdatasource.cc
test/: launch.sh  test.sh
